<resources>
    <string name="app_name">Plankers</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="criar_conta">Criar conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="acess_rios">Acessórios</string>
    <string name="bikes">Bikes</string>
    <string name="manuten_o">Manutenção</string>
    <string name="dicas">Dicas</string>
    <string name="locais">Locais</string>
    <string name="eventos">Eventos</string>
    <string name="novas">Novas</string>
    <string name="doa_es">Doações</string>
    <string name="usadas">Usadas</string>
    <string name="perdidas">Perdidas</string>
    <string name="ruas">Ruas</string>
    <string name="montanha">Montanha</string>
    <string name="loja">Loja</string>
    <string name="academia">Academia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">We can be heroes everywhere we go</string>
</resources>